# cuda-data-stat

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.sh
gocds/: config_template.go.in  debug.go  go.mod  main.go  service.go  stats.go  storage.go
gocds/_test/: config.go  data.go  debug_test.go  service_test.go  storage_test.go  testing.go
gocds/cds/: config_template.go.in  debug.go  service.go  stats.go  storage.go
include/cds/: cuda_error_check.h  data_stats.h  file_metadata.h  math.cuh  service.h  stats.cuh  storage.h
libcds/: CMakeLists.txt
libcds/include/cds/: cds.h  cuda_error.h  data_stats.h  debug.h  service.h  storage.h
libcds/src/: debug.cpp  service.cpp  stats.cu  storage.cpp
libcds/tests/: datastats_test.cpp  debug_test.cpp  service_test.cpp  storage_test.cpp
src/: data_stats.cpp  debug.cpp  service.cpp  stats.cu  storage.cpp
tests/: service_test.cpp  storage_test.cpp
